--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
             <version>5.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
