quartz inmemory simple job run

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SpringBootTwitchBot
 
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
