--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=SpringBootTwitchBot
-server.servlet.session.timeout=14d
+#server.port=80
+#server.servlet.session.timeout=14d
+server.servlet.session.timeout=1209600s
 
 #spring.sql.init.mode=always
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
